--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import Header from "../components/Header.astro";
 interface Props {
   title: string;
   description?: string;
@@ -23,7 +24,8 @@ const {
     <meta property="og:image" content={image} />
     <title>{title}</title>
   </head>
-  <body>
+  <body class="min-h-screen">
+    <Header />
     <slot />
   </body>
 </html>
