--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,20 +3,14 @@ import { getCollection } from "astro:content";
 import Layout from "../layouts/Layout.astro";
 import Main from "../components/Main.astro";
 import H1 from "../components/H1.astro";
+import PostList from "../components/PostList.astro";
 
 const posts = await getCollection("posts");
-console.log(posts);
 ---
 
 <Layout title="Blog | Rhythm Nation">
   <Main>
     <H1 text="Rhythm Nation Blog" />
-    {
-      posts.map((post) => (
-        <a href={`/blogs/${post.slug}`}>
-          <h2>{post.data.title}</h2>
-        </a>
-      ))
-    }
+    <PostList posts={posts} />
   </Main>
 </Layout>
