--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -3,6 +3,7 @@ import { getCollection, CollectionEntry } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
 import Main from "../../components/Main.astro";
 import H1 from "../../components/H1.astro";
+import { Image } from "astro:assets";
 
 export const getStaticPaths = async () => {
   const posts = await getCollection("posts");
@@ -25,7 +26,7 @@ const { Content } = await post.render();
 <Layout title={post.data.title}>
   <Main>
     <H1 text={post.data.title} />
-    <img
+    <Image
       src={post.data.image}
       alt={post.data.title}
       width={1024}
