--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -1,26 +1,17 @@
 ---
-import { getCollection } from "astro:content";
-import type { CollectionEntry } from "astro:content";
+import { getEntryBySlug } from "astro:content";
 import Layout from "../../layouts/Layout.astro";
 import Main from "../../components/Main.astro";
 import H1 from "../../components/H1.astro";
 import { Image } from "astro:assets";
 
-export const getStaticPaths = async () => {
-  const posts = await getCollection("posts");
-  const paths = posts.map((post) => ({
-    params: { slug: post.slug },
-    props: { post },
-  }));
+const { slug } = Astro.params;
+const post = await getEntryBySlug("posts", slug as string);
 
-  return paths;
-};
+if (!post) {
+  return Astro.redirect("/404");
+}
 
-type Props = {
-  post: CollectionEntry<"posts">;
-};
-
-const { post } = Astro.props;
 const { Content } = await post.render();
 ---
 
